# lebedev-quadrature

./: .gitignore  CMakeLists.txt  README.md  annotated.html  classlebedev_1_1_generator_point.html  classlebedev_1_1_quadrature_points.html  concepts.html  files.html  index.html  lebedev-quadrature.tagfile.xml  md__home_lucas__documents_research_lebedev_quadrature_docs__s_r_c__r_e_a_d_m_e.html  md__home_lucas__documents_research_lebedev_quadrature_docs__t_e_s_t__r_e_a_d_m_e.html  md__r_e_a_d_m_e.html  modules.html  namespacelebedev.html  namespaces.html  pages.html  searchdata-v2.js
data/: lebedev_quadrature_table.csv  sphere_lebedev_rule.cpp
docs/: poxy.toml  preprocess_readme.py
scripts/: get_lebedev_table_from_burkardt.py  print_lebedev_tables_from_csv.py
src/: generator_point.hpp  generator_point.inl  lebedev.hpp  lebedev_quadrature.hpp  lebedev_quadrature.inl  make_generator_points.inst  octahedral_generator.hpp  octahedral_generator.inl  quadrature_order.hpp  quadrature_order.inl  quadrature_points.hpp  quadrature_points.inl
test/: CMakeLists.txt  README.md  lebedev_implementation.cpp  lebedev_implementation.hpp  scalar_function_test.cpp  test_1.cpp  test_header_only.cpp  test_no_header_only.cpp  vector_function_test.cpp
